--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "juniorstore",
-		"logo": "images/12-removebg-preview.png",
+		"logo": "images/12-removebg-preview-5.png",
 		"sameAs": [
 				"https://www.facebook.com/SengarPihu/",
 				"https://www.instagram.com/baby_styleproducts/",
@@ -37,7 +37,7 @@
   </head>
   <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-xl-mode"><header class="u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-35c2"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="208" data-image-height="145">
-          <img src="images/12-removebg-preview.png" class="u-logo-image u-logo-image-1">
+          <img src="images/12-removebg-preview-5.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-align-left u-dropdown-icon u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem;">
@@ -49,11 +49,11 @@
           </div>
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Home.html" style="padding: 10px 20px;">Home</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="General.html" style="padding: 10px 20px;">General</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Products.html" style="padding: 10px 20px;">Products</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Toys.html">Toys</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Apparel-for-Babies.html">Apparel for Babies</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Others.html">Others</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Baby-Gear.html">Baby Gear</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Bikes_Rides.html">Bikes_Rides</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Apparel-for-Babies.html">Apparel for Babies</a>
 </li></ul>
 </div>
 </li></ul>
@@ -63,11 +63,11 @@
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="General.html">General</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Products.html">Products</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-4"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Toys.html">Toys</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Apparel-for-Babies.html">Apparel for Babies</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Others.html">Others</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Baby-Gear.html">Baby Gear</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Bikes_Rides.html">Bikes_Rides</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Apparel-for-Babies.html">Apparel for Babies</a>
 </li></ul>
 </div>
 </li></ul>
@@ -163,7 +163,7 @@ order today.&nbsp;&nbsp;<br>
     
     <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-footer u-grey-80" id="sec-0d5c"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="208" data-image-height="145">
-          <img src="images/12-removebg-preview-5.png" class="u-logo-image u-logo-image-1">
+          <img src="images/12-removebg-preview.png" class="u-logo-image u-logo-image-1">
         </a>
         <div class="u-align-left u-social-icons u-spacing-10 u-social-icons-1">
           <a class="u-social-url" title="facebook" target="_blank" href="https://www.facebook.com/SengarPihu/"><span class="u-icon u-social-facebook u-social-icon u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-6f84"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-6f84"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M73.5,31.6h-9.1c-1.4,0-3.6,0.8-3.6,3.9v8.5h12.6L72,58.3H60.8v40.8H43.9V58.3h-8V43.9h8v-9.2
