--- a/Baby-Gear.html
+++ b/Baby-Gear.html
@@ -392,25 +392,32 @@ click the Amazon link below to order. Place your order today.<br>
         </div>
       </div>
     </section>
-    <section class="u-clearfix u-section-8" id="sec-238a">
+    <section class="u-clearfix u-section-8" id="sec-e89b">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-1">
-                <img alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="659" data-image-height="879" src="images/71-IGbThQHL._SY879_.jpg">
-                <h3 class="u-text u-text-default u-text-1"> Infant Seat<span style="font-weight: 700;"></span>
-                </h3>
+              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-1">
+                <img alt="" class="u-image u-image-default u-image-1" data-image-width="659" data-image-height="879" src="images/71-IGbThQHL._SY879_.jpg">
+                <h3 class="u-text u-text-default u-text-1"> Infant Seat</h3>
                 <p class="u-text u-text-2"> 4Moms Mama Roo 4 Infant Seat, Black Classic</p>
-                <a href="https://amzn.to/3vyatst" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-1" target="_blank">amazon link</a>
+                <a href="https://amzn.to/3vyatst" class="u-active-none u-border-2 u-border-black u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-1" target="_blank">AMAZON LINK</a>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2">
-                <img alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="522" data-image-height="511" src="images/61EM2TwgxL._SX522_.jpg">
+              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-2">
+                <img alt="" class="u-image u-image-default u-image-2" data-image-width="522" data-image-height="511" src="images/61EM2TwgxL._SX522_.jpg">
                 <h3 class="u-text u-text-default u-text-3"> Automatic Baby Swing</h3>
                 <p class="u-text u-text-4"> R for Rabbit Snicker The Playful Automatic Baby Swing with Hanging Toys and Remote Control for Newborn Baby (Grey Blue)</p>
-                <a href="https://amzn.to/3kxatCX" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-2" target="_blank">amazon link</a>
+                <a href="https://amzn.to/3yc7GqF" class="u-active-none u-border-2 u-border-black u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-2" target="_blank">AMAZON LINK</a>
+              </div>
+            </div>
+            <div class="u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-3">
+                <img alt="" class="u-image u-image-default u-image-3" data-image-width="509" data-image-height="679" src="images/51Tlk73BT4L._SY679_.jpg">
+                <h3 class="u-text u-text-default u-text-5"> Baby Cozy Carry Cot</h3>
+                <p class="u-text u-text-6"> Mee Mee 5 in 1 Baby Cozy Carry Cot Cum Rocker (Beige)</p>
+                <a href="https://amzn.to/3yhL1cJ" class="u-active-none u-border-2 u-border-black u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-3" target="_blank">AMAZON LINK</a>
               </div>
             </div>
           </div>
