--- a/Home.html
+++ b/Home.html
@@ -3,10 +3,10 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="​Yummy.&nbsp;Fast., Our Menu, ​Breakfast, ​Lunch, Gallery, Contacts">
-    <meta name="description" content="">
+    <meta name="keywords" content="Baby Products, Items, Children essentials, Toys, Toddler Gear, Best Baby Products,  Newborn Items, Newborn Essential, Child, Baby Essential, Newborn,Newmothershopping,Kid Shopping.">
+    <meta name="description" content="www.juniorstore.github.io>: The largest Amazon baby products store. Newborn &amp; toddler essentials. At one place you will find toys, gear, accessories, apparel, and more products with Amazon ratings.">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Home</title>
+    <title>Amazon Baby Products List : NewBorn Baby Essential at One Place.</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -31,8 +31,8 @@
 		]
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Home">
-    <meta property="og:description" content="">
+    <meta property="og:title" content="Amazon Baby Products List : NewBorn Baby Essential at One Place.">
+    <meta property="og:description" content="www.juniorstore.github.io>: The largest Amazon baby products store. Newborn &amp; toddler essentials. At one place you will find toys, gear, accessories, apparel, and more products with Amazon ratings.">
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-xl-mode"><header class="u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-35c2"><div class="u-clearfix u-sheet u-sheet-1">
