--- a/General.html
+++ b/General.html
@@ -121,7 +121,7 @@
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3">
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="500" data-image-height="500" src="images/61P2cwU0n2L._SX522_-removebg-preview.png">
-                <h3 class="u-text u-text-default u-text-5">Sample Headline</h3>
+                <h3 class="u-text u-text-default u-text-5">Baby Safety Helmet</h3>
                 <p class="u-text u-text-6"> DearJoy Baby Safety Helmet With Corner Guard Used As Baby Head Protector + Kneepads (Apple Print)</p>
                 <a href="https://amzn.to/3EYnCOD" class="u-active-none u-border-2 u-border-black u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-3" target="_blank">amazon link</a>
               </div>
@@ -238,7 +238,7 @@
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-1">
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="500" data-image-height="500" src="images/612ZYlc-a3L._SX679_-removebg-preview.png">
-                <h3 class="u-text u-text-default u-text-1">Sample Headline</h3>
+                <h3 class="u-text u-text-default u-text-1">Baby Bottle Holder</h3>
                 <p class="u-text u-text-2"> House of Quirk Baby Bottle Holder for Hands Free Bottle Feeding , Gray</p>
                 <a href="https://amzn.to/3ksDvTX" class="u-active-none u-border-2 u-border-black u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-1" target="_blank">AMAZON LINK</a>
               </div>
@@ -246,7 +246,7 @@
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-2">
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="522" data-image-height="522" src="images/61mZmHV4zL._SX522_.jpg">
-                <h3 class="u-text u-text-default u-text-3">Sample Headline</h3>
+                <h3 class="u-text u-text-default u-text-3">Baby Pillow Bottle</h3>
                 <p class="u-text u-text-4"> Babies Bloom green baby pillow bottle holder&nbsp; with pillow.</p>
                 <a href="https://amzn.to/3F9l948" class="u-active-none u-border-2 u-border-black u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-2" target="_blank">AMAZON LINK</a>
               </div>
