--- a/Baby-Gear.html
+++ b/Baby-Gear.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="baby gear shop near me, baby gear products, baby gear online, baby gear online shopping, baby gear, baby gear amazon, baby gear at firstcry, amazon, flipkart, firstcry, baby care baby gear, baby carrier, baby walker, baby stroller, baby products online amazon, baby gear images, baby">
     <meta name="description" content="www.juniorstore.github.io>: The largest Amazon baby products store. Newborn &amp; toddler essentials. At one place you will find toys, gear, accessories, apparel, and more products with Amazon ratings.">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Amazon Baby Products List : NewBorn Baby Essential at One Place.</title>
