--- a/Bikes_Rides.html
+++ b/Bikes_Rides.html
@@ -3,7 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="baby scooter, baby scooter price, baby scooter cycle, baby scooter bike, baby scooter online, amazon, baby scooter amazon,
+baby scooter firstcry, baby scooter flipkart, baby scooter price, baby scooter shop near me, kids scooter online , best scooter online, scooters for kids, kids ride, scooter free shipping, scooter for kids near me, scooter of kids girls, kids scooter 2 wheel, kids scooter decathlon, electric scooter for kids with seat, 3 wheel scooter, ">
     <meta name="description" content="www.juniorstore.github.io>: The largest Amazon baby products store. Newborn &amp; toddler essentials. At one place you will find toys, gear, accessories, apparel, and more products with Amazon ratings.">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Amazon Baby Products List : NewBorn Baby Essential at One Place.</title>
