--- a/Products.html
+++ b/Products.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="Mobile, Laptop, selfie stick, mother product, menvest, ribvest, vest, breast pads, nursing breast pads, pad, feeding pillow, baby&amp;apos;s feeding pillow, Pillow, Feeding pillow with detachable cover, mother nipple cream, nipple cream, cream, nipple, heating bag, hot water bag, heating bag electric, hot water bottle bag, heating pad, peri bottle for postpartum care, peri bottle , momwasher, fridababy momwasher,electric breast pump, breast pump, breast pump with rechargeble battery, manual breast pump,babyswaddles, babyswaddle, swaddle, muslin baby swaddles, ">
     <meta name="description" content="www.juniorstore.github.io>: The largest Amazon baby products store. Newborn &amp; toddler essentials. At one place you will find toys, gear, accessories, apparel, and more products with Amazon ratings.">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Amazon Baby Products List : NewBorn Baby Essential at One Place.</title>
