--- a/Products.html
+++ b/Products.html
@@ -100,8 +100,6 @@
                 <h3 class="u-text u-text-default u-text-1"> Selfie Stick with Wireless Remote<span style="font-weight: 700;"></span>
                 </h3>
                 <p class="u-text u-text-2"> Hoteon Mobilife Bluetooth Extendable Selfie Stick with Wireless Remote and Tripod Stand for iPhone X/iPhone 8/8 Plus/iPhone 7/iPhone 7 Plus/Galaxy Note 8/Google More (Black)<br>
-                  <br> Please
-click the Amazon link below to order. Place your order today..
                 </p>
                 <a href="https://amzn.to/3JyquSQ" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-1">Amazon link</a>
               </div>
@@ -111,21 +109,18 @@ click the Amazon link below to order. Place your order today..
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="679" data-image-height="679" src="images/71ReOObbsWL._SX679_.jpg">
                 <h3 class="u-text u-text-default u-text-3"> HP 14s, AMD Ryzen 5-5500U 14 inches FHD</h3>
                 <p class="u-text u-text-4"> HP 14s, AMD Ryzen 5-5500U 14 inches FHD, IPS, Micro-Edge Display Laptop (8GB RAM/512GB SSD /Radeon Graphics/Windows 11/Alexa/Backlit Keyboard/MS Office/1.46kg, 14s-fq1092au<br>
-                  <br> Please
-click the Amazon link below to order. Place your order today.<br>
+                  <br>
                 </p>
                 <a href="https://amzn.to/37baLMA" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-2">Amazon link</a>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3">
-                <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="679" data-image-height="679" src="images/71KCwNV6MuL._SX679_.jpg">
-                <h3 class="u-text u-text-default u-text-5"> OPPO A31</h3>
-                <p class="u-text u-text-6"> OPPO A31 (Mystery Black, 6GB RAM, 128GB Storage) with No Cost EMI/Additional Exchange Offers<br>
-                  <br>Please
-click the Amazon link below to order. Place your order today.<br>
+                <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="679" data-image-height="679" src="images/51PSyaqEUmL._SX679_.jpg">
+                <h3 class="u-text u-text-default u-text-5"> Laser Printer</h3>
+                <p class="u-text u-text-6"> Brother HL-L2321D Single-Function Monochrome Laser Printer with Auto Duplex Printing.<br>
                 </p>
-                <a href="https://amzn.to/3vbI0Ht" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-3" target="_blank">amazon link</a>
+                <a href="https://amzn.to/3wWS7C1" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-3" target="_blank">amazon link</a>
               </div>
             </div>
           </div>
@@ -141,8 +136,6 @@ click the Amazon link below to order. Place your order today.<br>
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="522" data-image-height="522" src="images/71Lg1Cz4ldL._SX522_.jpg">
                 <h3 class="u-text u-text-default u-text-1"> Peri Bottle for Postpartum Care&nbsp;</h3>
                 <p class="u-text u-text-2"> Frida Mom Upside Down Peri Bottle for Postpartum Care | The Original Fridababy MomWasher for Perineal Recovery and Cleansing After .<br>
-                  <br>Please
-click the Amazon link below to order. Place your order today..<br>
                 </p>
                 <a href="https://amzn.to/3uTwVMj" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-1" target="_blank">amazon link</a>
               </div>
@@ -152,9 +145,7 @@ click the Amazon link below to order. Place your order today..<br>
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="522" data-image-height="522" src="images/61AU56u2HQS._SX522_.jpg">
                 <h3 class="u-text u-text-default u-text-3"> Electric <span style="font-weight: 700;">Breast </span>Pump
                 </h3>
-                <p class="u-text u-text-4"> Luvlap Electric Breast Pump with 3 Phase Pumping, Rechargeable Battery, Convertible to Manual Breast Pump, 2pcs Breast pads free, Soft &amp; Gentle, BPA Free<br>
-                  <br>Please
-click the Amazon link below to order. Place your order today..<br>
+                <p class="u-text u-text-4"> Luvlap Electric Breast Pump with 3 Phase Pumping, Rechargeable Battery, Convertible to Manual Breast Pump, 2pcs Breast pads free, Soft &amp; Gentle, BPA Free.<br>
                 </p>
                 <a href="https://amzn.to/3MeTAbT" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-2" target="_blank">
                   <span style="font-size: 1rem; font-weight: 700;">amazon </span>
@@ -170,8 +161,7 @@ click the Amazon link below to order. Place your order today..<br>
                   <span style="font-weight: 700;"></span>
                 </h3>
                 <p class="u-text u-text-6"> LuvLap 100% Cotton Muslin Baby Swaddles, Animals White Print, 0-18M+, Pack of 3<br>
-                  <br>Please
-click the Amazon link below to order. Place your order today..<br>
+                  <br>
                 </p>
                 <a href="https://amzn.to/36qL2PP" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-3" target="_blank">amazon link</a>
               </div>
@@ -188,9 +178,7 @@ click the Amazon link below to order. Place your order today..<br>
               <div class="u-container-layout u-similar-container u-container-layout-1">
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="679" data-image-height="679" src="images/61L2On1amkL._SX679_.jpg">
                 <h3 class="u-text u-text-default u-text-1"> Baby's 5-in-1 Feeding Pillow with Detachable Cover&nbsp;</h3>
-                <p class="u-text u-text-2"> Kradyl Kroft Baby's 5-in-1 Feeding Pillow with Detachable Cover ( Color-Multicolor, Columbus 2.0<br>
-                  <br>Please
-click the Amazon link below to order. Place your order today..<br>
+                <p class="u-text u-text-2"> Kradyl Kroft Baby's 5-in-1 Feeding Pillow with Detachable Cover ( Color-Multicolor, Columbus 2.0.<br>
                 </p>
                 <a href="https://amzn.to/3Erbndc" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-1" target="_blank">amazon link</a>
               </div>
@@ -200,8 +188,6 @@ click the Amazon link below to order. Place your order today..<br>
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="679" data-image-height="679" src="images/61mhj66IS8L._SX679_.jpg">
                 <h3 class="u-text u-text-default u-text-3"> Motherlove Nipple Cream</h3>
                 <p class="u-text u-text-4">SFormCreamBrandMotherlove<br>Item Weight3.17<br>&nbsp;OuncesItem Volume30 Millilitres.<br>
-                  <br>Please
-click the Amazon link below to order. Place your order today..<br>
                 </p>
                 <a href="https://amzn.to/3uUgmzU" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-2" target="_blank">amazon link</a>
               </div>
@@ -212,8 +198,7 @@ click the Amazon link below to order. Place your order today..<br>
                 <h3 class="u-text u-text-default u-text-5"> H<span style="font-weight: 700;"></span>eating bag
                 </h3>
                 <p class="u-text u-text-6"> RYLAN heating bag, hot water bags for pain relief, heating bag electric , Heating Pad-Heat Pouch Hot Water Bottle Bag, Electric Hot Water Bag,Heating Pad with For Pain Relief<br>
-                  <br>Please
-click the Amazon link below to order. Place your order today..<br>
+                  <br>
                 </p>
                 <a href="https://amzn.to/3rEe1qL" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-3" target="_blank">
                   <span style="font-size: 1rem;"></span>amazon link
@@ -238,8 +223,7 @@ click the Amazon link below to order. Place your order today..<br>
                   </span>
                 </h3>
                 <p class="u-text u-text-2"> Levi’s Men’s 100% Cotton 100 CA Solid Sports Rib Vest (Pack of 2)<br>
-                  <br>Please
-click the Amazon link below to order. Place your order today.<br>
+                  <br>
                 </p>
                 <a href="https://amzn.to/3OgOzkZ" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-1" target="_blank">amazon link</a>
               </div>
@@ -250,8 +234,7 @@ click the Amazon link below to order. Place your order today.<br>
                 <h3 class="u-text u-text-default u-text-3"> Nursing Breast Pads&nbsp;<span style="font-weight: 700;"></span>
                 </h3>
                 <p class="u-text u-text-4"> Mee Mee Ultra Thin Super Absorbent Disposable Nursing Breast Pads (80 Pads) | New Resealable Pack | 16 Pads Free<br>
-                  <br>Please
-click the Amazon link below to order. Place your order today.<br>
+                  <br>
                 </p>
                 <a href="https://amzn.to/3MjkQWN" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-2" target="_blank">Amazon link</a>
               </div>
