--- a/Products.html
+++ b/Products.html
@@ -155,15 +155,11 @@
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-3">
-                <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="522" data-image-height="522" src="images/71SBS4V9XGL._SX522_.jpg">
-                <h3 class="u-text u-text-default u-text-5">
-                  <span style="font-weight: 700;">Baby Swaddles</span>
-                  <span style="font-weight: 700;"></span>
-                </h3>
-                <p class="u-text u-text-6"> LuvLap 100% Cotton Muslin Baby Swaddles, Animals White Print, 0-18M+, Pack of 3<br>
-                  <br>
+                <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="522" data-image-height="548" src="images/51KqtVeOJpL._SX522_.jpg">
+                <h3 class="u-text u-text-default u-text-5"> Steam Inhaler</h3>
+                <p class="u-text u-text-6"> Wonder Steam Inhaler Sauna Vaporizer for Blackheads Removal, Cold &amp; Cough, Rejuvenate Skin for Youthful Complexion, Helps in Breathing Disorders, Face Humidifier<br>
                 </p>
-                <a href="https://amzn.to/36qL2PP" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-3" target="_blank">amazon link</a>
+                <a href="https://amzn.to/3OBL340" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-3" target="_blank">amazon link</a>
               </div>
             </div>
           </div>
